--- a/src/App/App.css
+++ b/src/App/App.css
@@ -8,5 +8,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  height:100vh;
+}
+
+main {
+  margin-top: 20vh;
 }
