--- a/src/App/App.css
+++ b/src/App/App.css
@@ -12,5 +12,10 @@ body {
 }
 
 main {
-  margin-top: 20vh;
+  margin-top: 30vh;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
