--- a/src/Search/Search.css
+++ b/src/Search/Search.css
@@ -4,11 +4,14 @@ form {
     border-radius: 1em;
     overflow: hidden;
     background-color: #8af8d6;
+    display: flex;
+    width: 25em;
+    height: 3em;
 }
 
 .region-select {
-    width: 10vw;
-    height: 5vh;
+    width: 30%;
+    height: 100%;
     background-color: #8af8d6;
     color: #00575c;
     border: none;
@@ -16,8 +19,8 @@ form {
 }
 
 .search-input {
-    width: 20vw;
-    height: 5vh;
+    width: 70%;
+    height: 100%;
     border: none;
     font-weight: bold;
 }
